--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,7 +8,16 @@ repos:
     -   id: end-of-file-fixer
     -   id: check-yaml
     -   id: check-added-large-files
-#-   repo: https://github.com/psf/black
-#    rev: 22.10.0
-#    hooks:
-#    -   id: black
+
+-   repo: https://github.com/psf/black
+    rev: 24.4.2
+    hooks:
+    -   id: black
+
+-   repo: https://github.com/pycqa/flake8
+    rev: ''  # pick a git hash / tag to point to
+    hooks:
+    -   id: flake8
+        name: flake8
+        entry: flake8 --max-line-length=130 --ignore=W503,E203,E231,E126,E128,E125,E122,E131,E121
+        types: [python]
