Add line length argument to black

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,6 +13,7 @@ repos:
     rev: 24.4.2
     hooks:
     -   id: black
+        args: ["--line-length=130"]
 
 -   repo: https://github.com/pycqa/flake8
     rev: ''  # pick a git hash / tag to point to
